@@ -5,7 +5,7 @@
  ---------------------------------------------------------------------------
  http://frame3dd.sourceforge.net/
  ---------------------------------------------------------------------------
- Copyright (C) 1992-2013  Henri P. Gavin
+ Copyright (C) 1992-2014  Henri P. Gavin
 
  FRAME3DD is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
@@ -341,7 +341,7 @@ void display_version_about()
  fprintf(stderr," Frame3DD version: %s\n", VERSION);
  fprintf(stderr," Analysis of 2D and 3D structural frames with elastic and geometric stiffness\n");
  fprintf(stderr," http://frame3dd.sourceforge.net\n");
- fprintf(stderr," GPL Copyright (C) 1992-2013, Henri P. Gavin \n");
+ fprintf(stderr," GPL Copyright (C) 1992-2014, Henri P. Gavin \n");
  fprintf(stderr," Frame3DD is distributed in the hope that it will be useful");
  fprintf(stderr," but with no warranty.\n");
  fprintf(stderr," For details see the GNU Public Licence:");
@@ -1771,7 +1771,7 @@ void write_input_data (
 	for (i=1; i<=80; i++)	fprintf(fp,"_");
   	fprintf(fp,"\nFrame3DD version: %s ", VERSION );
 	fprintf(fp,"              http://frame3dd.sf.net/\n");
-	fprintf(fp,"GPL Copyright (C) 1992-2013, Henri P. Gavin \n");
+	fprintf(fp,"GPL Copyright (C) 1992-2014, Henri P. Gavin \n");
 	fprintf(fp,"Frame3DD is distributed in the hope that it will be useful");
 	fprintf(fp," but with no warranty.\n");
 	fprintf(fp,"For details see the GNU Public Licence:");
@@ -2084,7 +2084,7 @@ void write_static_csv (
 	if ( lc == 1 ) {
   	 fprintf(fpcsv,"\" Frame3DD version: %s ", VERSION );
 	 fprintf(fpcsv,"              http://frame3dd.sf.net/\"\n");
-	 fprintf(fpcsv,"\"GPL Copyright (C) 1992-2013, Henri P. Gavin \"\n");
+	 fprintf(fpcsv,"\"GPL Copyright (C) 1992-2014, Henri P. Gavin \"\n");
 	 fprintf(fpcsv,"\"Frame3DD is distributed in the hope that it will be useful");
 	 fprintf(fpcsv," but with no warranty.\"\n");
 	 fprintf(fpcsv,"\"For details see the GNU Public Licence:");
@@ -2256,7 +2256,7 @@ void write_static_mfile (
 	if ( lc == 1 ) {
   	 fprintf(fpm,"%% Frame3DD version: %s ", VERSION );
 	 fprintf(fpm,"              http://frame3dd.sf.net/\n");
-	 fprintf(fpm,"%%GPL Copyright (C) 1992-2013, Henri P. Gavin \n");
+	 fprintf(fpm,"%%GPL Copyright (C) 1992-2014, Henri P. Gavin \n");
 	 fprintf(fpm,"%%Frame3DD is distributed in the hope that it will be useful");
 	 fprintf(fpm," but with no warranty.\n");
 	 fprintf(fpm,"%%For details see the GNU Public Licence:");
@@ -2632,7 +2632,7 @@ WRITE_INTERNAL_FORCES -
 calculate frame element internal forces, Nx, Vy, Vz, Tx, My, Mz
 calculate frame element local displacements, Rx, Dx, Dy, Dz
 write internal forces and local displacements to an output data file
-4jan10, 7mar11
+4jan10, 7mar11, 21jan14
 ------------------------------------------------------------------------------*/
 void write_internal_forces (
 		FILE *fp, char infcpath[], int lc, int nL, char title[], float dx,
@@ -2933,16 +2933,16 @@ void write_internal_forces (
 			Sy[i] = Sy[i-1] + 0.5*(Mz[i-1]+Mz[i])/(E[m]*Iz[m])*dx_;
 			Sz[i] = Sz[i-1] + 0.5*(My[i-1]+My[i])/(E[m]*Iy[m])*dx_;
 		}
-		if ( shear ) {
-			for (i=1; i<=nx; i++) {
-				Sy[i] += Vy[i]/(G[m]*Asy[m]);
-				Sz[i] += Vz[i]/(G[m]*Asz[m]);
-			}
-		}
 		// linear correction for bias in trapezoidal integration
 		for (i=1; i<=nx; i++) {
 			Sy[i] -= (Sy[nx]-u12) * i/nx;
 			Sz[i] -= (Sz[nx]+u11) * i/nx;
+		}
+		if ( shear ) {		// add-in slope due to shear deformation
+			for (i=0; i<=nx; i++) {
+				Sy[i] += Vy[i]/(G[m]*Asy[m]);
+				Sz[i] += Vz[i]/(G[m]*Asz[m]);
+			}
 		}
 		// displacement along frame element "m"
 		dx_ = dx;
